force-app/main/default/objects/Asset/fields/Innova_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Innova_Logged_in_User__c</fullName>
    <formula>$User.Email =  Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User</label>
    <type>Checkbox</type>
</CustomField>