force-app/main/default/objects/Asset/fields/wkitsm__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssetsAssignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>