force-app/main/default/objects/Asset/fields/wkitsm__Cache__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Cache__c</fullName>
    <label>Cache</label>
    <length>255</length>
    <type>Text</type>
</CustomField>