force-app/main/default/objects/Asset/fields/wkitsm__ChassisType__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ChassisType__c</fullName>
    <label>Chassis Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>