force-app/main/default/objects/Asset/fields/wkitsm__Chipset__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Chipset__c</fullName>
    <label>Chipset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>