force-app/main/default/objects/Asset/fields/wkitsm__ComputerId__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ComputerId__c</fullName>
    <label>ComputerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>