force-app/main/default/objects/Asset/fields/wkitsm__ConfigurationItemClass__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ConfigurationItemClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ConfigurationItemClass__c object</description>
    <inlineHelpText>Lookup to ConfigurationItemClass__c object</inlineHelpText>
    <label>Configuration Item Class</label>
    <referenceTo>wkitsm__ConfigurationItemClass__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>AssetsCIClasses</relationshipName>
    <type>Lookup</type>
</CustomField>