force-app/main/default/objects/Asset/fields/wkitsm__ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ConnectionType__c</fullName>
    <label>Connection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>