force-app/main/default/objects/Asset/fields/wkitsm__Cost__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Cost__c</fullName>
    <label>Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>