force-app/main/default/objects/Asset/fields/wkitsm__Datasource__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Datasource__c</fullName>
    <formula>CASE(wkitsm__DatasourceInternal__c,
&quot;tds&quot;,  $Label.wkitsm__datasourceTds,
&quot;unmanaged_network_scan&quot;, $Label.wkitsm__datasourceUnmanagedNetworkScan,
&quot;unmanaged_confirmed&quot;, $Label.wkitsm__datasourceUnmanagedConfirmed,
&quot;unmanaged_user_specified&quot;, $Label.wkitsm__datasourceCustomEndpoint,
&quot;&quot;, $Label.wkitsm__datasourceCustom,
wkitsm__DatasourceInternal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datasource</label>
    <type>Text</type>
</CustomField>