force-app/main/default/objects/Asset/fields/wkitsm__DatasourceInternal__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DatasourceInternal__c</fullName>
    <label>DatasourceInternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>