force-app/main/default/objects/Asset/fields/wkitsm__DiscoverMethod__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DiscoverMethod__c</fullName>
    <description>Method used to discover this CI</description>
    <label>Discover Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>