force-app/main/default/objects/Asset/fields/wkitsm__DiscoverProfile__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DiscoverProfile__c</fullName>
    <description>Profile used to discover this CI.</description>
    <label>Discover Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>