force-app/main/default/objects/Asset/fields/wkitsm__DisposalDate__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DisposalDate__c</fullName>
    <label>Disposal Date</label>
    <type>DateTime</type>
</CustomField>