force-app/main/default/objects/Asset/fields/wkitsm__DnsServers__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DnsServers__c</fullName>
    <label>DNS Servers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>