force-app/main/default/objects/Asset/fields/wkitsm__DoesNeedUpdate__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DoesNeedUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs to be updated</label>
    <type>Checkbox</type>
</CustomField>