force-app/main/default/objects/Asset/fields/wkitsm__DomainName__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DomainName__c</fullName>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>