force-app/main/default/objects/Asset/fields/wkitsm__DuplicateId__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DuplicateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>DuplicateOf</relationshipName>
    <type>Lookup</type>
</CustomField>