force-app/main/default/objects/Asset/fields/wkitsm__Email__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>