force-app/main/default/objects/Asset/fields/wkitsm__Encryption__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Encryption__c</fullName>
    <label>Encryption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>