force-app/main/default/objects/Asset/fields/wkitsm__Interface__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Interface__c</fullName>
    <label>Interface</label>
    <length>255</length>
    <type>Text</type>
</CustomField>