force-app/main/default/objects/Asset/fields/wkitsm__IpAddress__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__IpAddress__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>