force-app/main/default/objects/Asset/fields/wkitsm__IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>