force-app/main/default/objects/Asset/fields/wkitsm__IsVirtual__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__IsVirtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Virtual</label>
    <type>Checkbox</type>
</CustomField>