force-app/main/default/objects/Asset/fields/wkitsm__LastLoggedInUser__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__LastLoggedInUser__c</fullName>
    <label>Last Logged In User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>