force-app/main/default/objects/Asset/fields/wkitsm__LastObserved__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__LastObserved__c</fullName>
    <label>The time the asset was last observed</label>
    <type>DateTime</type>
</CustomField>