force-app/main/default/objects/Asset/fields/wkitsm__Location__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>