force-app/main/default/objects/Asset/fields/wkitsm__MacAddress__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__MacAddress__c</fullName>
    <description>MAC Address</description>
    <label>MAC Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>