force-app/main/default/objects/Asset/fields/wkitsm__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>