force-app/main/default/objects/Asset/fields/wkitsm__Memory__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Memory__c</fullName>
    <label>Memory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>