force-app/main/default/objects/Asset/fields/wkitsm__Model__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Model__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>