force-app/main/default/objects/Asset/fields/wkitsm__NatIpAddress__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__NatIpAddress__c</fullName>
    <description>Returns the IP Address of this client as seen from the Tanium Server.</description>
    <label>NAT IP Address</label>
    <length>39</length>
    <type>Text</type>
</CustomField>