force-app/main/default/objects/Asset/fields/wkitsm__Notes__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>