force-app/main/default/objects/Asset/fields/wkitsm__OnlineStatus__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__OnlineStatus__c</fullName>
    <label>Online Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>