force-app/main/default/objects/Asset/fields/wkitsm__OpenPorts__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__OpenPorts__c</fullName>
    <description>Returns the top 1000 (according to Nmap) open tcp ports.  Example: 135,443,445,902,912,1536,1537,1538,1539,1566</description>
    <label>Open Ports</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>