force-app/main/default/objects/Asset/fields/wkitsm__OperatingSystem__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__OperatingSystem__c</fullName>
    <label>Operating System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>