force-app/main/default/objects/Asset/fields/wkitsm__OsVersion__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__OsVersion__c</fullName>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>