force-app/main/default/objects/Asset/fields/wkitsm__Power__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Power__c</fullName>
    <label>Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>