force-app/main/default/objects/Asset/fields/wkitsm__ProcurementDate__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ProcurementDate__c</fullName>
    <label>Procurement Date</label>
    <type>DateTime</type>
</CustomField>