force-app/main/default/objects/Asset/fields/wkitsm__SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>