force-app/main/default/objects/Asset/fields/wkitsm__Size__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Size__c</fullName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>