force-app/main/default/objects/Asset/fields/wkitsm__Speed__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Speed__c</fullName>
    <label>Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>