force-app/main/default/objects/Asset/fields/wkitsm__SystemUuid__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__SystemUuid__c</fullName>
    <label>System UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>