force-app/main/default/objects/Asset/fields/wkitsm__TaniumAssetId__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TaniumAssetId__c</fullName>
    <externalId>true</externalId>
    <label>TaniumAssetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>