force-app/main/default/objects/Asset/fields/wkitsm__TaniumClientActive__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TaniumClientActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is actively managed by Tanium</label>
    <type>Checkbox</type>
</CustomField>