force-app/main/default/objects/Asset/fields/wkitsm__TaniumCmdbId__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TaniumCmdbId__c</fullName>
    <description>This field holds the Id coming from the Tanium CMDB query</description>
    <externalId>true</externalId>
    <inlineHelpText>This field holds the Id coming from the Tanium CMDB query</inlineHelpText>
    <label>TaniumCmdbId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>