force-app/main/default/objects/Asset/fields/wkitsm__Type__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>