force-app/main/default/objects/Asset/fields/wkitsm__Uptime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Uptime__c</fullName>
    <label>Uptime</label>
    <type>DateTime</type>
</CustomField>