force-app/main/default/objects/Asset/fields/wkitsm__Value__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>