force-app/main/default/objects/Asset/fields/wkitsm__Vendor__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Vendor__c</fullName>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>