force-app/main/default/objects/Asset/fields/wkitsm__Version__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>