force-app/main/default/objects/Asset/recordTypes/wkitsm__Application.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Application</fullName>
    <active>true</active>
    <description>Application</description>
    <label>Application</label>
</RecordType>