force-app/main/default/objects/Asset/recordTypes/wkitsm__ApplicationServer.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__ApplicationServer</fullName>
    <active>true</active>
    <description>Application Server</description>
    <label>Application Server</label>
</RecordType>