force-app/main/default/objects/Asset/recordTypes/wkitsm__BusinessProcess.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__BusinessProcess</fullName>
    <active>true</active>
    <description>Business Process</description>
    <label>Business Process</label>
</RecordType>