force-app/main/default/objects/Asset/recordTypes/wkitsm__BusinessService.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__BusinessService</fullName>
    <active>true</active>
    <description>Business Service</description>
    <label>Business Service</label>
</RecordType>