force-app/main/default/objects/Asset/recordTypes/wkitsm__Database.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Database</fullName>
    <active>true</active>
    <description>Database</description>
    <label>Database</label>
</RecordType>