force-app/main/default/objects/Asset/recordTypes/wkitsm__DataCenter.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__DataCenter</fullName>
    <active>true</active>
    <description>Data Center</description>
    <label>Data Center</label>
</RecordType>