force-app/main/default/objects/Asset/recordTypes/wkitsm__Endpoint.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Endpoint</fullName>
    <active>true</active>
    <description>Unmanaged Endpoint</description>
    <label>Endpoint</label>
</RecordType>