force-app/main/default/objects/Asset/recordTypes/wkitsm__Service.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__Service</fullName>
    <active>true</active>
    <description>Service</description>
    <label>Service</label>
</RecordType>