force-app/main/default/objects/Asset/recordTypes/wkitsm__TaniumCustomCI.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__TaniumCustomCI</fullName>
    <active>true</active>
    <description>Tanium Custom Configuration Item</description>
    <label>Tanium Custom CI</label>
</RecordType>