force-app/main/default/objects/Asset/recordTypes/wkitsm__TaniumDiscoverCI.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__TaniumDiscoverCI</fullName>
    <active>true</active>
    <description>Tanium CI found by Discover Scan</description>
    <label>Tanium Discover CI</label>
</RecordType>