force-app/main/default/objects/Asset/recordTypes/wkitsm__TaniumManagedCI.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__TaniumManagedCI</fullName>
    <active>true</active>
    <description>Tanium Managed Configuration Item</description>
    <label>Tanium Managed CI</label>
</RecordType>