force-app/main/default/objects/Asset/recordTypes/wkitsm__TaniumUnmanagedCI.recordType-meta.xml
<RecordType>
    <fullName>wkitsm__TaniumUnmanagedCI</fullName>
    <active>true</active>
    <description>Tanium Unmanaged Configuration Item</description>
    <label>Tanium Unmanaged CI</label>
</RecordType>