force-app/main/default/objects/Asset/listViews/Asset_Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Asset_Assigned_to_Me</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Innova_Logged_in_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Asset Assigned to Me</label>
</ListView>