force-app/main/default/objects/Asset/listViews/wkitsm__All_Configuration_Items.listView-meta.xml
<ListView>
    <fullName>wkitsm__All_Configuration_Items</fullName>
    <columns>ASSET.NAME</columns>
    <columns>wkitsm__ConfigurationItemClass__c</columns>
    <columns>ASSET.RECORDTYPE</columns>
    <columns>wkitsm__SerialNumber__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.wkitsm__TaniumCustomCI,Asset.wkitsm__TaniumManagedCI,Asset.wkitsm__TaniumUnmanagedCI,Asset.wkitsm__TaniumDiscoverCI</value>
    </filters>
    <label>All Configuration Items</label>
</ListView>